# docuseek

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/eval/: gold_set_v1.jsonl
docuseek/: config.py  experiment_config.py  logging.py
docuseek/api/: main.py  schemas.py
docuseek/api/routes/: health.py  query.py
docuseek/chunking/: agentic.py  base.py  context_aware.py  document_structure.py  factory.py  fixed.py  io.py  recursive.py  semantic.py
docuseek/embedding/: base.py  colbert.py  dense.py  matryoshka.py
docuseek/eval/: benchmark.py  display.py  latency.py  query_metrics.py  ragas_runner.py  retrieval_metrics.py  schema.py
docuseek/generation/: base.py  factory.py  local_generator.py  mistral_api.py  prompting.py
docuseek/ingestion/: cleaners.py  pipeline.py
docuseek/ingestion/scrapers/: base.py  huggingface.py
docuseek/observability/: langfuse_tracer.py
docuseek/query/: base.py  hyde.py  model.py  multi_query.py  ner.py  rewrite.py
docuseek/reranking/: base.py  colbert.py  cross_encoder.py  factory.py  rrf.py
docuseek/retrieval/: base.py  bm25.py  dense.py  factory.py  hybrid.py
experiments/00_baseline/: config.yaml
experiments/01_chunking/document_structure/: config.yaml  results.json
experiments/01_chunking/fixed/: config.yaml  results.json
experiments/01_chunking/recursive/: config.yaml  results.json
experiments/01_chunking/semantic/: config.yaml  results.json
experiments/02_retrieval/bm25/: config.yaml  results.json
experiments/02_retrieval/dense/: config.yaml  results.json
experiments/02_retrieval/hybrid/: config.yaml  results.json
experiments/03_reranking/colbert/: config.yaml  results.json
experiments/03_reranking/cross_encoder/: config.yaml  results.json
experiments/03_reranking/none/: config.yaml  results.json
experiments/04_query/hyde/: config.yaml  results.json
experiments/04_query/hyde_mq/: config.yaml  results.json
experiments/04_query/hyde_mq_ner/: config.yaml
experiments/04_query/hyde_ner/: config.yaml
experiments/04_query/mq_ner/: config.yaml  results.json
experiments/04_query/multi_query/: config.yaml  results.json
experiments/04_query/ner/: config.yaml  results.json
experiments/04_query/none/: config.yaml  results.json
frontend/: app.py
scripts/: benchmark.py  build_index.py  chunk_docs.py  ingest.py  run_benchmark.py  serve.py  validate_gold_set.py
